--- a/components/sidebar/sidebar.css
+++ b/components/sidebar/sidebar.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .resizer {
@@ -119,6 +120,7 @@
   gap: 0;
   flex: 1;
   overflow: auto;
+  overflow-x: hidden;
   padding-right: 6px;
 }
 
